# varnish-metric

./: .gitignore  CMakeLists.txt  README  README.md  test_config.xml  ubuntu_install.sh
libmetric/: CMakeLists.txt
libmetric/metric/: dbg.h  socket.c  socket.h  statsd_client.c  statsd_client.h  statsd_send.c  statsd_send.h
main/: CMakeLists.txt  main.c
src/: example.vcl  vmod_hello.c  vmod_hello.vcc
vmod/: .gitignore  Makefile.am  autogen.sh  clean.sh  configure.ac  ubuntu_install.sh
vmod/examples/: default.vcl
vmod/src/: .gitignore  Makefile.am  vmod_metric.c  vmod_metric.vcc
